# ChangeLog for media-video/vdr
# Copyright 2003 Martin Hierling; Distributed under the GPL
# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/noad/ChangeLog,v 1.2 2004/02/15 12:49:26 mad Exp $

*noad-0.3.2b
  15 Feb 2004; M.Hierling <mad@cc.fh-lippe.de>
  version bump

*noad-0.3.2
  03 Oct 2003; M.Hierling <mad@cc.fh-lippe.de>
  initial version, no doku, no description