@@ -1,6 +1,10 @@
 # ChangeLog for media-video/vdr
 # Copyright 2003 Martin Hierling; Distributed under the GPL
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/noad/ChangeLog,v 1.2 2004/02/15 12:49:26 mad Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/media-video/noad/ChangeLog,v 1.3 2004/03/30 18:32:47 austriancoder Exp $
+
+*noad-0.4.1
+  30 Mar 2004; Christian Gmeiner <christian at visual-page.de>
+  version bump
 
 *noad-0.3.2b
   15 Feb 2004; M.Hierling <mad@cc.fh-lippe.de>
